Closed
Bug 331017
Opened 19 years ago
Closed 19 years ago
places > bookmarks menu > new folder uses live bookmark icon
Categories
(Firefox :: Bookmarks & History, defect, P2)
Tracking
()
RESOLVED
FIXED
Firefox 2 alpha2
People
(Reporter: Peter6, Assigned: brettw)
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
|
1.55 KB,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060318 Firefox/1.6a1 ID:2006031901 [cairo]
repro:
1.open places
2.select bookmarks
3.select a bookmark (just to make sure where the new folder will go)
4.press on the [new folder] button
result:
instead of the folder icon the live bookmark icon is used
Comment 1•19 years ago
|
||
Reproducible with trunk/Linux.
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060319 Firefox/1.6a1
OS: Windows 2000 → All
Comment 2•19 years ago
|
||
New folder of context menu on Bookmarks toolbar
and one of Bookmarks menu also use live bookmark icon.
Comment 3•19 years ago
|
||
Hm, this makes me really cureous for I see only normal new folders with WinXP and this build: 1.9a1_2006031903.
-click Places
-click in the right field
-click New Folder
-result: normal folder icon
| Reporter | ||
Comment 4•19 years ago
|
||
(In reply to comment #3)
> Hm, this makes me really cureous for I see only normal new folders with WinXP
> and this build: 1.9a1_2006031903.
> -click Places
> -click in the right field
> -click New Folder
> -result: normal folder icon
>
It's definitly not 100% reproducable, i'm not really sure under which circumstances I get the livebookmark icon and under which the folder icon
| Assignee | ||
Comment 5•19 years ago
|
||
Did you ever delete a live bookmark? Currently, not all information gets deleted and if another folder gets the same ID, it will get those properties. If so, this is bug 327162.
| Reporter | ||
Comment 6•19 years ago
|
||
(In reply to comment #5)
> Did you ever delete a live bookmark? Currently, not all information gets
> deleted and if another folder gets the same ID, it will get those properties.
> If so, this is bug 327162.
>
ever, yes, a week ago or so, in an attempt to reduce bug 329534 's impact
.
Updated•19 years ago
|
Assignee: nobody → brettw
Priority: -- → P2
Target Milestone: --- → Firefox 2 alpha2
| Assignee | ||
Comment 7•19 years ago
|
||
This patch makes it so we don't re-use folder IDs, which should make this not happen, even if we keep forgetting to reset the livemark annotations and icons.
Attachment #215718 -
Flags: review?(bryner)
Updated•19 years ago
|
Attachment #215718 -
Flags: review?(bryner) → review+
| Assignee | ||
Comment 8•19 years ago
|
||
On branch and trunk.
Comment 9•19 years ago
|
||
I can still reproducible with trunk/Linux.
I deleted live bookmarks some times.
Is this bug 327162?
Comment 10•19 years ago
|
||
This is still occuring on Windows Firefox 2.0a1 builds. Tested in both SafeMode and a new Profile.
Open Places
Click Bookmarks Menu and expand
Click New Folder
Use any name of use the 'default' New Folder
Note when created it still have the RSS Icon
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20060331 Firefox/2.0a1 ID:2006033105
Comment 11•19 years ago
|
||
This is still a problem here too. Reopening.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060331 Firefox/1.6a1 ID:2006033107
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 12•19 years ago
|
||
You'll need a new bookmarks_history.sqlite created with a new version for this to work. Fixing it for old profiles is bug 327162.
Jim: Are you sure you actually created a brand new bookmarks_history.sqlite? You are creating a brand new profile and the first thing you do is create a new bookmarks folder, and it has the livemarks icon? I've never heard of this, even before this fix, those steps would not give you a livemark icon.
Comment 13•19 years ago
|
||
Sorry my bad. Yes this is fine with a new profile.
| Assignee | ||
Comment 14•19 years ago
|
||
Closing this again. Current brokenness in this area is bug 327162.
Status: REOPENED → RESOLVED
Closed: 19 years ago → 19 years ago
Resolution: --- → FIXED
Comment 15•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•