Bug 331017 r=bryner Folder IDs are re-used resulting in wrong icons.

Original committer: brettw%gmail.com
Original revision: 1.54
Original date: 2006/03/22 22:34:31